--- a/src/styles/courts.css
+++ b/src/styles/courts.css
@@ -1,5 +1,5 @@
-.mainContainer11{
-    width: 100%;
-    height: 100vh;
+.mainContainer11 {
+    flex: 1;
     background-color: #ac9fff;
+    overflow-y: auto; /* Allow content to scroll if it overflows */
 }
