--- a/src/components/styles/court.css
+++ b/src/components/styles/court.css
@@ -1,4 +1,5 @@
 body {
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -14,8 +15,8 @@ body {
 
 .mainContainer11 {
     flex: 1;
-    overflow-y: auto; /* Enable content scrolling if needed */
     background-color: #ac9fff;
+    overflow-y: auto; /* Allow content to scroll if it overflows */
 }
 
 .mainContainer{
