--- a/src/components/styles/court.css
+++ b/src/components/styles/court.css
@@ -129,7 +129,7 @@ body {
 
 .list{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: auto;
     padding: 0;
     margin: 0px;
