--- a/src/components/styles/court.css
+++ b/src/components/styles/court.css
@@ -132,11 +132,12 @@ body {
     height: 100vh;
     overflow: auto;
     padding: 0;
-    margin: 0px;
+    margin: 0;
     background-color: #ac9fff;
 }
 
 .list-item {
+    overflow: auto;
     list-style: none;
     margin: 0;
     padding: 0;
