--- a/src/components/styles/court.css
+++ b/src/components/styles/court.css
@@ -7,13 +7,6 @@ body {
     margin: 0;
 }
 
-.header, .footer {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    height: 70px;
-    width: 100%;
-    background-color: #5143a8;
-}
-
 .mainContainer11 {
     flex: 1;
     background-color: #ac9fff;
@@ -180,6 +173,11 @@ body {
     border-top-right-radius: 10px;
     padding: 0px;
     align-items: center;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    height: 70px; /* Adjust the height as needed */
+    z-index: 2; /* Adjust the z-index if needed */
 }
 
 .navIcon{
