--- a/src/components/styles/court.css
+++ b/src/components/styles/court.css
@@ -1,15 +1,6 @@
 body {
     overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; /* Ensure the body takes up at least the full viewport height */
-    margin: 0;
-}
-
-.mainContainer11 {
-    flex: 1;
-    background-color: #ac9fff;
-    overflow-y: auto; /* Allow content to scroll if it overflows */
+    margin: 0; /* Reset default body margin */
 }
 
 .mainContainer{
@@ -122,23 +113,22 @@ body {
 
 .list{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: auto;
     padding: 0;
-    margin: 0;
+    margin: 0px;
     background-color: #ac9fff;
 }
 
 .list-item {
-    overflow: auto;
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
 .header{
+    margin-top: auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    margin-top: 0px;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -162,6 +152,7 @@ body {
 }
 
 .footer{
+    margin-bottom: auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: row;
@@ -172,7 +163,6 @@ body {
     border-top-right-radius: 10px;
     padding: 0px;
     align-items: center;
-    margin-bottom: auto;
 }
 
 .navIcon{
