--- a/src/styles/account.css
+++ b/src/styles/account.css
@@ -16,12 +16,13 @@ body{
     margin-top: 30px;
     font-size: 40px;
     font-weight: bolder;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .profileImg{
-    width: 35%;
+    width: 144px;
     height: auto;
+    max-height: 144px;
     border-radius: 100px;
     background-color: white;
     border: solid 5px white;
@@ -30,7 +31,7 @@ body{
 
 .textImg{
     font-weight: bolder;
-    color: white;
+    color: rgb(0, 0, 0);
     background-color:#2F2562;
     border: none;
     border-radius: 10px;
@@ -44,19 +45,35 @@ body{
 
 .nameUser{
     font-size: 20px;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .userInput{
+    text-align: center;
     height: 35px;
     width: 65%;
     margin-inline: 20px;
     border: none;
-    border-radius: 5px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.userInput:placeholder{
+    text-align: center;
+}
+
+.userInput:focus{
+    outline: none;
+    border: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .userOption{
     max-width: 60%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .saveButton{
@@ -92,6 +109,15 @@ body{
     font-size: 15px; 
 }
 
-#file-upload-button{
-    width: 40%;
+.back{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    padding: 10px;
+    min-height: 75%;
+    height: auto;
+    background-color: #f2f2f2;
+    border-radius: 20px;
 }
