--- a/src/components/styles/accounts.css
+++ b/src/components/styles/accounts.css
@@ -5,7 +5,7 @@
     width: 95%;
     height: 100px;
     margin: 15px auto;
-    background-color: #f2f2f2;
+    background-color: #5143a8;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     padding: 10px;
@@ -13,6 +13,7 @@
   }
   
   .userImg {
+    color: white;
     width: 60px;
     height: 60px;
     border-radius: 15px;
@@ -34,11 +35,11 @@
   .user-name {
     font-size: 20px;
     margin-right: 10px;
-    color: #000000;
+    color: #ffffff;
   }
   
   .info{
-    color: #000000;
+    color: #ffffff;
     font-size: 1rem;
     margin-bottom: 0px;
     margin-inline: auto;
