--- a/src/components/styles/accounts.css
+++ b/src/components/styles/accounts.css
@@ -9,7 +9,6 @@
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     padding: 10px;
-    transition: transform 0.2s ease-in-out;
   }
   
   .userImg {
@@ -22,19 +21,36 @@
   }
   
   #infoUserDiv {
+    height: 95%;
+    margin-right: 10px;
+    border-radius: 10px;
     flex: 1;
+    background-color: #AC9FFF;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
   
   .row1 {
+    height: 50%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 5px;
+    border-radius: 5px;
+    min-height: 25px;
+    background-color: rgb(255, 174, 81);
+  }
+
+  .row2 {
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 5px;
+    min-height: 25px;
   }
   
   .user-name {
+    margin: auto;
     font-size: 20px;
-    margin-right: 10px;
     color: #ffffff;
   }
   
@@ -43,6 +59,5 @@
     font-size: 1rem;
     margin-bottom: 0px;
     margin-inline: auto;
-    margin-left: 0px;
     justify-content: center;
   }
