--- a/src/styles/courts.css
+++ b/src/styles/courts.css
@@ -2,5 +2,5 @@
     height: 100vh;
     flex: 1;
     background-color: #ac9fff;
-    overflow-y: auto; /* Allow content to scroll if it overflows */
+    overflow-y: auto;
 }
