--- a/src/components/styles/accounts.css
+++ b/src/components/styles/accounts.css
@@ -7,26 +7,26 @@
     margin: 15px auto;
     background-color: #5143a8;
     border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
     padding: 10px;
   }
   
   .userImg {
+    width: 80%;
     color: white;
-    width: 60px;
-    height: 60px;
-    border-radius: 15px;
+    height: auto;
+    border-radius: 5px;
     object-fit: cover;
-    margin-right: 20px;
+    margin: auto;
+    background-color: rgba(255, 174, 81, 0);
   }
   
   #infoUserDiv {
-    height: 95%;
-    margin-right: 10px;
-    border-radius: 10px;
+    width: 85%;
+    height: 100%;
+    border-radius: 5px;
     flex: 1;
     background-color: #AC9FFF;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
   
   .row1 {
@@ -34,17 +34,17 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    border-radius: 5px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
     min-height: 25px;
     background-color: rgb(255, 174, 81);
   }
 
-  .row2 {
+  .row3 {
     height: 50%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    border-radius: 5px;
     min-height: 25px;
   }
   
@@ -60,4 +60,16 @@
     margin-bottom: 0px;
     margin-inline: auto;
     justify-content: center;
+  }
+
+  .socials{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 12%;
+    height: 100%;
+    margin-right: 10px;
+    background-color:#AC9FFF;
+    border-radius: 5px;
   }
