--- a/src/styles/account.css
+++ b/src/styles/account.css
@@ -10,6 +10,7 @@ body{
     justify-content: center;
     width: 100%;
     height: 100vh;
+    overflow-y: scroll;
 }
 
 .profileTitle{
@@ -20,14 +21,14 @@ body{
 }
 
 .profileImg{
-    color: white;
-    width: 144px;
+    width: 30%;
     height: auto;
     max-height: 144px;
-    border-radius: 100px;
-    background-color: white;
-    border: solid 5px white;
+    border-radius: 10px;
+    background-color: #ffffff;
+    border: solid 5px #ffffff;
     margin-bottom: 15px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .textImg{
@@ -46,13 +47,13 @@ body{
 
 .nameUser{
     font-size: 20px;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 .userInput{
     text-align: center;
     height: 35px;
-    width: 65%;
+    width: 100%;
     margin-inline: 20px;
     border: none;
     background-color: #ffffff;
@@ -72,7 +73,7 @@ body{
 
 .userOption{
     max-width: 60%;
-    text-align: center;
+    text-align: start;
     justify-content: center;
     align-items: center;
 }
@@ -105,3 +106,56 @@ body{
     background-color: #f2f2f200;
     border-radius: 20px;
 }
+
+.inputContainer{
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    width: 85%;
+    min-height: 50px;
+    margin-right: 0px;
+    height: auto;
+    border: solid 3px #2F2562;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.accountInput{
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0);
+    height: 100%;
+    text-align: start;
+    font-weight: bold;
+    border: none;
+}
+
+.accountInput:focus{
+   border: none;
+   border-style: none;
+   outline: none;
+}
+
+.userAccoutName{
+    color: white;
+    font-weight: bolder;
+}
+
+.buttonAccount{
+    color: white;
+    background-color: #2F2562;
+    width: 85%;
+    min-height: 50px;
+    height: auto;
+    border: solid 3px #2F2562;
+    border-radius: 5px;
+    font-weight: bold;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.iconInput{
+    margin: auto;
+    margin-inline: 10px;
+    width: 10%;
+    height: auto;
+}
+
