--- a/src/components/styles/court.css
+++ b/src/components/styles/court.css
@@ -4,7 +4,7 @@ body {
 }
 
 .mainContainer{
-    padding: 10px;
+    padding: 0px;
     display: flex;
     flex-direction: column;
     width: 95%;
@@ -22,11 +22,16 @@ body {
 }
 
 .name{
+    display: flex;
+    flex-direction: column;
     color: rgb(255, 255, 255);
     font-size: 24px;
     width: 100%;
     height: auto;
-    margin-top: 10px;
+    min-height: 48px;border-left: none;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
 }
 
 .maps{
@@ -56,12 +61,12 @@ body {
 .courtImg{
     width: 92%;
     height: auto;
-    border-radius: 5px;
+    border-radius: 0px;
 }
 
 .iconImg{
-    width: 35px;
-    height: 35px;
+    width: 38px;
+    height: 38px;
     margin-inline: auto;
 }
 
@@ -71,14 +76,18 @@ body {
 }
 
 .infoImg{
+    border: #ffffff solid 5px;
+    border-left: none;
+    border-right: none;
+    border-top: none;
     height: auto;
     width: 100%;
-    max-width: 370px;
     height: auto;
     max-height: 175px;
     min-height: 150px;
     padding: 0px;
-    border-radius: 5px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 }
 
 #seconDiv{
@@ -103,7 +112,7 @@ body {
     flex-direction: row;
     width: 100%;
     align-items: center;
-    margin: auto;
+    margin: 0px;
     height: 50px;
     background-color:none;
     border-radius: 10px;
