--- a/src/components/styles/accounts.css
+++ b/src/components/styles/accounts.css
@@ -9,6 +9,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
     padding: 10px;
+    border: solid 3px white;
   }
   
   .userImg {
