--- a/src/styles/courts.css
+++ b/src/styles/courts.css
@@ -1,5 +1,5 @@
 .mainContainer11 {
-    height: calc(100vh - (headerHeight + footerHeight));
+    height: calc(100% - (headerHeight + footerHeight));
     flex: 1;
     background-color: #ac9fff;
     overflow-y: auto;
