--- a/src/components/styles/court.css
+++ b/src/components/styles/court.css
@@ -161,12 +161,12 @@ body {
 }
 
 .footer{
+    width: 100%;
+    min-height: 55px;
     margin-bottom: auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: row;
-    height: 70px;
-    width: 100%;
     background-color: #5143a8;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
